# notion-toggl-integration

./: .env.example  .gitignore  README.md  pyproject.toml
src/: schemas.py  settings.py  toggl.py
